--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "express": "^4.16.4",
     "helmet": "^3.18.0",
     "lowdb": "^1.0.0"
+  },
+  "nodemonConfig": {
+    "ignore": ["db.json"],
+    "delay": "2500"
   }
 }
