--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js" 
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
     "express-easy-zip": "^1.1.4",
     "helmet": "^3.18.0",
     "himalaya": "^1.1.0",
+    "http-auth": "^3.2.3",
     "lowdb": "^1.0.0"
   },
   "nodemonConfig": {
