--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "mclvren",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-easy-zip": "^1.1.4",
     "helmet": "^3.18.0",
