--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mclvren/edutags/tree/node"
+    "url": "https://github.com/mclvren/edutags.git"
   },
   "author": "mclvren",
   "license": "ISC",
